added bitcoin graph with graph.js

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class='col-xs-12'>
+            <canvas id="chart" width="600" height="600"></canvas>
+          </div>
+        </div>
       </div>
       <script src="./data.js"></script>
     </body>
